Calculators for remaining arithmetic operators
DivisionBinaryExpressionCalculator,
MultiplicationBinaryExpressionCalculator,
ModulusBinaryExpressionCalculator